# dynamorio-boilerplate

./: .gitignore  CMakeLists.txt  README.md
src/: bbbuf.c
